attempt at fixing failing build